force-app/main/default/objects/Prospect__c/fields/Initial_Marketing_Notes_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Initial_Marketing_Notes_Analyst__c</fullName>
    <label>Initial Marketing Notes @ Analyst</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>