force-app/main/default/objects/Prospect__c/fields/Initial_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Offer_Price__c</fullName>
    <label>Initial Offer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>