force-app/main/default/objects/Prospect__c/fields/Intake_All_In_Basis__c.field-meta.xml
<CustomField>
    <fullName>Intake_All_In_Basis__c</fullName>
    <label>Intake All In Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>