force-app/main/default/objects/Prospect__c/fields/Intake_ARV__c.field-meta.xml
<CustomField>
    <fullName>Intake_ARV__c</fullName>
    <label>Intake ARV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>