force-app/main/default/objects/Prospect__c/fields/Intake_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Intake_Cap_Rate__c</fullName>
    <label>Intake Cap Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>