force-app/main/default/objects/Prospect__c/fields/Intake_Discount__c.field-meta.xml
<CustomField>
    <fullName>Intake_Discount__c</fullName>
    <label>Intake Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>