force-app/main/default/objects/Prospect__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce (Resale)</fullName>
            </value>
            <value>
                <fullName>Google Doc</fullName>
            </value>
            <value>
                <fullName>Bold Street</fullName>
            </value>
            <value>
                <fullName>HouseCanary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>