force-app/main/default/objects/Prospect__c/fields/Is_New_Construction__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Construction</label>
    <type>Checkbox</type>
</CustomField>