force-app/main/default/objects/Prospect__c/fields/Is_Rental_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rental Restriction</label>
    <type>Checkbox</type>
</CustomField>