force-app/main/default/objects/Prospect__c/fields/LeaseBack_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>LeaseBack_Duration_in_Days__c</fullName>
    <label>LeaseBack Duration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>