force-app/main/default/objects/Prospect__c/fields/Leasing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Fee__c</fullName>
    <formula>(750+250)/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leasing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>