force-app/main/default/objects/Prospect__c/fields/Leasing_Restrictions_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Restrictions_Allowed__c</fullName>
    <label>Leasing Restrictions Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>