force-app/main/default/objects/Prospect__c/fields/Levered_Yield__c.field-meta.xml
<CustomField>
    <fullName>Levered_Yield__c</fullName>
    <formula>Net_Income__c/Equity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Levered Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>