force-app/main/default/objects/Prospect__c/fields/Listing_Provider_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Provider_Listing_ID__c</fullName>
    <label>Listing Provider Listing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>