force-app/main/default/objects/Prospect__c/fields/Listing_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Provider_Name__c</fullName>
    <label>Listing Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>