force-app/main/default/objects/Prospect__c/fields/logical_rating__c.field-meta.xml
<CustomField>
    <fullName>logical_rating__c</fullName>
    <formula>Avg_School_Rating__c - Due_Diligence_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>logical rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>