force-app/main/default/objects/Prospect__c/fields/Lot_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Lot_SqFt__c</fullName>
    <label>Lot Sq/Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>