force-app/main/default/objects/Prospect__c/fields/Market_Comparables__c.field-meta.xml
<CustomField>
    <fullName>Market_Comparables__c</fullName>
    <label>Market Comparables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>