force-app/main/default/objects/Prospect__c/fields/Market_Comparables_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Market_Comparables_Analyst__c</fullName>
    <label>Market Comparables @ Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>