force-app/main/default/objects/Prospect__c/fields/Marketing_Points__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Points__c</fullName>
    <label>Marketing Points</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>