force-app/main/default/objects/Prospect__c/fields/Miscellaneous_Underwriting_Standards__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Underwriting_Standards__c</fullName>
    <formula>OR(
IF(Has_Busy_Street__c = TRUE, FALSE,
IF(Has_Septic__c = TRUE, FALSE,
IF(ISBLANK(Basement_Type__c) = FALSE, FALSE,
IF(Has_Heavy_Industry__c = TRUE, FALSE,
IF(OR(ISPICKVAL(Flood_Zone__c, &quot;High&quot;), ISPICKVAL(Flood_Zone__c, &quot;Moderate&quot;)), FALSE,
TRUE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miscellaneous Underwriting Standards</label>
    <type>Checkbox</type>
</CustomField>