force-app/main/default/objects/Prospect__c/fields/Monthly_HOA_UW__c.field-meta.xml
<CustomField>
    <fullName>Monthly_HOA_UW__c</fullName>
    <label>Monthly HOA UW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>