force-app/main/default/objects/Prospect__c/fields/Monthly_HOA_UW_From_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_HOA_UW_From_Frequency__c</fullName>
    <formula>IF(OR(ISPICKVAL(HOA_Frequency__c, &quot;Annually&quot;),ISPICKVAL(HOA_Frequency__c, &quot;&quot;)),IF(ISBLANK(Actual_Monthly_HOA_UW__c),(Monthly_HOA_UW__c/12),(Actual_Monthly_HOA_UW__c/12)),
IF(ISPICKVAL(HOA_Frequency__c,&quot;Semi-Annually&quot;),IF(ISBLANK(Actual_Monthly_HOA_UW__c),(Monthly_HOA_UW__c/2),(Actual_Monthly_HOA_UW__c/2)),
IF(ISPICKVAL(HOA_Frequency__c, &quot;Quarterly&quot;),IF(ISBLANK(Actual_Monthly_HOA_UW__c),(Monthly_HOA_UW__c/4),(Actual_Monthly_HOA_UW__c/4)),IF(ISBLANK(Actual_Monthly_HOA_UW__c),Monthly_HOA_UW__c,Actual_Monthly_HOA_UW__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly HOA @ UW From Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>