force-app/main/default/objects/Prospect__c/fields/Neighborhod_Rating_School_Scores__c.field-meta.xml
<CustomField>
    <fullName>Neighborhod_Rating_School_Scores__c</fullName>
    <label>Neighborhod Rating / School Scores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>