force-app/main/default/objects/Prospect__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>