force-app/main/default/objects/Prospect__c/fields/Net_Levered_IRR__c.field-meta.xml
<CustomField>
    <fullName>Net_Levered_IRR__c</fullName>
    <label>Net Levered IRR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>