force-app/main/default/objects/Prospect__c/fields/Net_Operating_Income_NOI__c.field-meta.xml
<CustomField>
    <fullName>Net_Operating_Income_NOI__c</fullName>
    <formula>Net_Revenue__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Operating Income(NOI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>