force-app/main/default/objects/Prospect__c/fields/Net_Yield__c.field-meta.xml
<CustomField>
    <fullName>Net_Yield__c</fullName>
    <formula>Net_Operating_Income_NOI__c/ Total_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>