force-app/main/default/objects/Prospect__c/fields/New_Formula__c.field-meta.xml
<CustomField>
    <fullName>New_Formula__c</fullName>
    <formula>Accepted_Contract_Price__c*Final_Offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>