force-app/main/default/objects/Prospect__c/fields/New_Formula_field__c.field-meta.xml
<CustomField>
    <fullName>New_Formula_field__c</fullName>
    <formula>350</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Formula field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>