force-app/main/default/objects/Prospect__c/fields/NOI_Margin__c.field-meta.xml
<CustomField>
    <fullName>NOI_Margin__c</fullName>
    <formula>Net_Operating_Income_NOI__c/Net_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOI Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>