force-app/main/default/objects/Prospect__c/fields/Occupancy_Status_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status_Acquisition__c</fullName>
    <label>Occupancy Status @ Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Tenant Occupied</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>