force-app/main/default/objects/Prospect__c/fields/Panel_Number__c.field-meta.xml
<CustomField>
    <fullName>Panel_Number__c</fullName>
    <label>Panel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>