force-app/main/default/objects/Prospect__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Garage Space</fullName>
            </value>
            <value>
                <fullName>2 Garage Space</fullName>
            </value>
            <value>
                <fullName>3 Garage Space</fullName>
            </value>
            <value>
                <fullName>4 Garage Space</fullName>
            </value>
            <value>
                <fullName>5 Garage Space</fullName>
            </value>
            <value>
                <fullName>5+ Garage Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>