force-app/main/default/objects/Prospect__c/fields/Pipeline_ID__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline ID</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>