force-app/main/default/objects/Prospect__c/fields/PipelineInspectionCreated__c.field-meta.xml
<CustomField>
    <fullName>PipelineInspectionCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PipelineInspectionCreated</label>
    <type>Checkbox</type>
</CustomField>