force-app/main/default/objects/Prospect__c/fields/Plutus_new_baths__c.field-meta.xml
<CustomField>
    <fullName>Plutus_new_baths__c</fullName>
    <label>Plutus new baths</label>
    <length>10</length>
    <type>Text</type>
</CustomField>