force-app/main/default/objects/Prospect__c/fields/Premium_Discount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Discount__c</fullName>
    <formula>Intake_ARV__c / All_in_Basis__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Premium) / Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>