force-app/main/default/objects/Prospect__c/fields/Primary_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Primary_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>Duplicate Prospects</relationshipLabel>
    <relationshipName>DuplicateProspects</relationshipName>
    <type>Lookup</type>
</CustomField>