force-app/main/default/objects/Prospect__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Gives the Property Address</description>
    <formula>Property_Street_Address__c + &quot;,&quot; + &quot; &quot; + Property_City__c + &quot;,&quot; + &quot; &quot; + Property_State__c + &quot; &quot; + Property_Zip_Code__c</formula>
    <inlineHelpText>Populated from Address object</inlineHelpText>
    <label>Property Address (Formula)</label>
    <type>Text</type>
</CustomField>