force-app/main/default/objects/Prospect__c/fields/Property_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Text__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>