force-app/main/default/objects/Prospect__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <formula>IF(ISBLANK(Address_Record__r.Validated_City__c) , Address_Record__r.City__c,Address_Record__r.Validated_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property City</label>
    <type>Text</type>
</CustomField>