force-app/main/default/objects/Prospect__c/fields/Property_Details_Validated__c.field-meta.xml
<CustomField>
    <fullName>Property_Details_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Details Validated</label>
    <type>Checkbox</type>
</CustomField>