force-app/main/default/objects/Prospect__c/fields/Property_Fits_Buy_Box__c.field-meta.xml
<CustomField>
    <fullName>Property_Fits_Buy_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Fits Buy Box</label>
    <type>Checkbox</type>
</CustomField>