force-app/main/default/objects/Prospect__c/fields/Property_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Property_Insurance__c</fullName>
    <label>Property Insurance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>