force-app/main/default/objects/Prospect__c/fields/Property_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Fee__c</fullName>
    <formula>Net_Revenue__c*0.04</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>