force-app/main/default/objects/Prospect__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>IF(ISBLANK(Address_Record__r.Validated_State__c) , Address_Record__r.State__c,Address_Record__r.Validated_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>