force-app/main/default/objects/Prospect__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <formula>IF(ISBLANK(Address_Record__r.Validated_Street__c) , Address_Record__r.Name,Address_Record__r.Validated_Street__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>