force-app/main/default/objects/Prospect__c/fields/Property_Type_Underwriting_Standards__c.field-meta.xml
<CustomField>
    <fullName>Property_Type_Underwriting_Standards__c</fullName>
    <formula>IF(ISPICKVAL(Property_Type__c, &quot;Detached Single Family&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type Underwriting Standards</label>
    <type>Checkbox</type>
</CustomField>