force-app/main/default/objects/Prospect__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>IF(ISBLANK( Address_Record__r.Validated_Zip__c ),Address_Record__r.Zip__c, Address_Record__r.Validated_Zip__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>