force-app/main/default/objects/Prospect__c/fields/Prospect_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Id 18-Digit</label>
    <type>Text</type>
</CustomField>