force-app/main/default/objects/Prospect__c/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Created</fullName>
                <default>true</default>
                <label>Prospect Created</label>
            </value>
            <value>
                <fullName>Property Estimates Completed</fullName>
            </value>
            <value>
                <fullName>Underwriting Estimates Completed</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Pending Contract Authorization</fullName>
            </value>
            <value>
                <fullName>Moved to Pipeline</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Initial Inspection Ordered</fullName>
                <isActive>false</isActive>
                <label>Initial Inspection Ordered</label>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
                <isActive>false</isActive>
                <label>Offer Accepted</label>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
                <isActive>false</isActive>
                <label>Submit for Approval</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <isActive>false</isActive>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Submitted for HHM Underwriting</fullName>
                <isActive>false</isActive>
                <label>Submitted for HHM Underwriting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>