force-app/main/default/objects/Prospect__c/fields/Prospect_Stage_before_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage_before_Cancel__c</fullName>
    <label>Prospect Stage before Cancel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>