force-app/main/default/objects/Prospect__c/fields/Purchase_Price_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Date__c</fullName>
    <label>Purchase Price Date</label>
    <type>Date</type>
</CustomField>