force-app/main/default/objects/Prospect__c/fields/Purchase_Price_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Sq_Ft__c</fullName>
    <formula>Purchase_Price__c/ Square_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price/Sq Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>