force-app/main/default/objects/Prospect__c/fields/Recommended_Initial_List_Rent__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Initial_List_Rent__c</fullName>
    <label>Recommended Initial List Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>