force-app/main/default/objects/Prospect__c/fields/Recommended_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Offer_Price__c</fullName>
    <label>Recommended Offer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>