force-app/main/default/objects/Prospect__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Region details</description>
    <inlineHelpText>Mapped from the Zipcode</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Prospect</relationshipLabel>
    <relationshipName>Prospect</relationshipName>
    <type>Lookup</type>
</CustomField>