force-app/main/default/objects/Prospect__c/fields/Rehab_Estimate_Score__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Estimate_Score__c</fullName>
    <formula>IF(AND(VALUE(Text(Initial_Rehab_Estimate__c))&gt;=22500,VALUE(Text(Initial_Rehab_Estimate__c))&lt;=29999),1.25,
IF(AND(VALUE(Text(Initial_Rehab_Estimate__c))&gt;=15000,VALUE(Text(Initial_Rehab_Estimate__c))&lt;=22499),1.88,
IF((VALUE(Text(Initial_Rehab_Estimate__c))&lt;15000),2.50,0.63)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Estimate Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>