force-app/main/default/objects/Prospect__c/fields/Rent_Comparables_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Rent_Comparables_Analyst__c</fullName>
    <label>Rent Comparables @ Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>