force-app/main/default/objects/Prospect__c/fields/Rental_Comparables__c.field-meta.xml
<CustomField>
    <fullName>Rental_Comparables__c</fullName>
    <label>Rental Comparables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>