force-app/main/default/objects/Prospect__c/fields/Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Date__c</fullName>
    <label>Reopen Date</label>
    <type>Date</type>
</CustomField>