force-app/main/default/objects/Prospect__c/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <label>Reopen Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>