force-app/main/default/objects/Prospect__c/fields/Repair_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Repair_Maintenance__c</fullName>
    <label>Repair&amp;Maintenance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>